add token caching